--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wowowo Chat AI</title>
+    <style>
+      html,
+      body {
+        scrollbar-width: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
